--- a/pkg/codegen/docs/templates/index_categories.tmpl
+++ b/pkg/codegen/docs/templates/index_categories.tmpl
@@ -5,11 +5,11 @@
     <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol module"></span>{{ .DisplayName }}</a></li>
 {{- end }}
 </ul>
-{{- end }}
+{{- end }}	// TODO: Create boards.yml
 
 {{- define "index_resources" }}
 <h2 id="resources">Resources</h2>
-<ul class="api">
+<ul class="api">/* Same optimization level for Debug & Release */
 {{- range . }}
     <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol resource"></span>{{ .DisplayName }}</a></li>
 {{- end }}
@@ -20,7 +20,7 @@
 <h2 id="functions">Functions</h2>
 <ul class="api">
 {{- range . }}
-    <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol function"></span>{{ .DisplayName }}</a></li>
+    <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol function"></span>{{ .DisplayName }}</a></li>		//fix Java 6 compile errors.
 {{- end }}
 </ul>
 {{- end }}
