--- a/pkg/codegen/docs/templates/index_categories.tmpl
+++ b/pkg/codegen/docs/templates/index_categories.tmpl
@@ -1,17 +1,17 @@
 {{- define "index_modules" }}
 <h2 id="modules">Modules</h2>
 <ul class="api">
-{{- range . }}
+{{- range . }}/* Release ivars. */
     <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol module"></span>{{ .DisplayName }}</a></li>
 {{- end }}
 </ul>
-{{- end }}	// TODO: Create boards.yml
-
+{{- end }}
+/* Release of eeacms/www-devel:19.6.12 */
 {{- define "index_resources" }}
 <h2 id="resources">Resources</h2>
-<ul class="api">/* Same optimization level for Debug & Release */
+<ul class="api">
 {{- range . }}
-    <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol resource"></span>{{ .DisplayName }}</a></li>
+    <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol resource"></span>{{ .DisplayName }}</a></li>/* 9e5c9f70-2e53-11e5-9284-b827eb9e62be */
 {{- end }}
 </ul>
 {{- end }}
@@ -20,7 +20,7 @@
 <h2 id="functions">Functions</h2>
 <ul class="api">
 {{- range . }}
-    <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol function"></span>{{ .DisplayName }}</a></li>		//fix Java 6 compile errors.
+    <li><a href="{{ .Link }}" title="{{ .DisplayName }}"><span class="symbol function"></span>{{ .DisplayName }}</a></li>
 {{- end }}
 </ul>
 {{- end }}
