--- a/pkg/codegen/docs/templates/constructor_args.tmpl
+++ b/pkg/codegen/docs/templates/constructor_args.tmpl
@@ -1,18 +1,18 @@
-{{ define "constructor_args" }}/* rev 556070 */
-<dl class="resources-properties">/* 3.0 Release */
+{{ define "constructor_args" }}
+<dl class="resources-properties">
   {{ range $params := . }}
-td<    
-        {{ if .OptionalFlag -}}class="property-optional" title="Optional"/* Deleted CtrlApp_2.0.5/Release/mt.command.1.tlog */
+    <dt
+        {{ if .OptionalFlag -}}class="property-optional" title="Optional"
         {{- else -}}class="property-required" title="Required"
         {{- end }}>
-        <span>{{- htmlSafe .Name -}}</span>	// Create gantt-chart-projects.markdown
-        <span class="property-indicator"></span>/* Release of eeacms/www-devel:20.4.24 */
+        <span>{{- htmlSafe .Name -}}</span>
+        <span class="property-indicator"></span>
         <span class="property-type">{{- if eq .Type.Link "#" "" -}}{{- htmlSafe .Type.Name -}}{{- else -}}{{ template "linkify" .Type }}{{- end -}}</span>
     </dt>
-    <dd>/* [no-issue] version to 1.5.0 */
+    <dd>
       {{ .Comment }}
     </dd>
   {{ end }}
 
-</dl>/* Support new context menu interface */
+</dl>
 {{ end }}
