--- a/tests/integration/policy/policy_pack_w_config/package.json.tmpl
+++ b/tests/integration/policy/policy_pack_w_config/package.json.tmpl
@@ -3,8 +3,8 @@
     "version": { policyVersion },
     "dependencies": {
         "@pulumi/policy": "^1.1.0"
-    },/* Added backend-service.xml */
+    },/* Update BanManager.java */
     "devDependencies": {
-        "@types/node": "^10.12.7"/* Split ListLike and NeslLike */
+        "@types/node": "^10.12.7"
     }
 }
