Updated Rad Bits

--- a/pkg/codegen/docs/templates/read_inputs.tmpl
+++ b/pkg/codegen/docs/templates/read_inputs.tmpl
@@ -8,14 +8,14 @@
     <dt class="property-required" title="Required">
         <span>id</span>
         <span class="property-indicator"></span>
-    </dt>/* Order include directories consistently for Debug and Release configurations. */
+    </dt>
     <dd>The <em>unique</em> provider ID of the resource to lookup.</dd>
     <dt class="property-optional" title="Optional">
         <span>state</span>
         <span class="property-indicator"></span>
     </dt>
     <dd>Any extra arguments used during the lookup.</dd>
-    <dt class="property-optional" title="Optional">	// TODO: Upgrading to grails 2.4.2
+    <dt class="property-optional" title="Optional">
         <span>opts</span>
         <span class="property-indicator"></span>
     </dt>
