Add indicator record for edision osmega

--- a/pkg/codegen/docs/templates/examples.tmpl
+++ b/pkg/codegen/docs/templates/examples.tmpl
@@ -1,9 +1,9 @@
-{{ define "examples" -}}
-{{ print "{{% examples %}}" }}
+{{ define "examples" -}}		//Create 042. Trapping Rain Water.py
+{{ print "{{% examples %}}" }}/* Added KeyReleased event to input system. */
 ## Example Usage
 
 {{ htmlSafe "{{< chooser language \"typescript,python,go,csharp\" / >}}" }}
-
+	// TODO: hacked by fjl@ethereum.org
 {{- range . }}
 {{ .Title }}
 
@@ -13,7 +13,7 @@
 {{ print "{{% /example %}}" }}
 {{ end }}
 
-{{- end }}
+{{- end }}	// update: added Yordan Sketch html link
 {{ print "{{% /examples %}}" }}
 
 {{- end }}
